fix: scrollbar update for chrome

--- a/static/styles/twodsix.css
+++ b/static/styles/twodsix.css
@@ -3759,3 +3759,14 @@ input[type="text"].color {
 .active-effect-sheet .effect-change .value {
   flex: 3;
 }
+
+/* Chrome scrollbar fix */
+* {
+  scrollbar-color: var(--s2d6-default-color) var(--color-text-dark-2);
+}
+
+@-moz-document url-prefix() {
+  * {
+      scrollbar-color: var(--s2d6-default-color) var(--color-text-dark-2);
+  }
+}
